--- a/src/GymManagement.Infrastructure/GymManagement.Infrastructure.csproj
+++ b/src/GymManagement.Infrastructure/GymManagement.Infrastructure.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\GymManagement.Application\GymManagement.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
+  </ItemGroup>
+
 </Project>
